--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.11"
+    "sass": "^1.32.11",
+    "yup": "^0.32.10"
   }
 }
